# AI-exploration

./: README.md
AI_image/1Prompt1Story/: README.md  requirements.txt  story_generator.py  story_generator_demo.py
Robotics/: README.md  node_creation_example.py  robot_motion_simulation.py
agent_build/: LEARNING_GUIDE.md  README.md  requirements.txt  setup.py
agent_build/agent_build_guide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agent_build/docs/: __init__.py  agent_foundations.md  guardrails.md  orchestration_patterns.md
agent_build/examples/: __init__.py
agent_build/examples/guardrails/: __init__.py  churn_detection.py
agent_build/examples/multi_agent/: __init__.py  translation_manager.py
agent_build/examples/single_agent/: __init__.py  weather_agent.py
cuda-cutlass/: .gitignore  CMakeLists.txt  Makefile  README.md  SUMMARY.md  cpu_gemm_example.cpp  gemm_example.cpp  simple_gemm_example.cpp
neural_network/: requirements.txt
neural_network/e3nn/: .gitignore  LICENSE  QUICKSTART.md  README.md  run_all_tests.py  test_e3nn_gate.py  test_e3nn_irrep.py  test_e3nn_linear.py
probability/pyro-code/: README.md  coin_bias_learning.py  requirements.txt
ragas_evaluation_demo/: README.md  ragas_demo.py  requirements.txt  setup_api_key.md  test_api_key.py  testset_generator_demo.py  测试集生成结果_20250809_074604.csv  评估结果明细_20250809_071729.csv  运行总结.md
